--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -1,106 +1,91 @@
 * {
+    font-family: 'Montserrat';
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
 h1 {
-    margin-bottom: 15px;
+    margin-bottom: 60px;
     text-align: center;
-    
+    margin-top: 40px;
 }
 
 h2 {
-    text-align: right;
+    padding: 4px 32px;
+    border: 1px solid black;
+    float: right;
+    
+}
+
+.section {
+    background-color: gray;
+    border: 1px solid black;
+}
+
+.item {
+    background-color: white;
+    
 }
 
 p {
-    border: 1px solid black;
-    background-color: gray;
-    height: 150px;
+    padding: 12px;
+    clear: right;
+}
 
+
+#chicken {
+    background-color: lightcoral;
+}
+
+#beef {
+    background-color: brown;
+    color: white;
+}
+
+#sushi {
+    background-color: moccasin;
+    
 }
 
 .row {
     width: 100%;
 }
 
-.chicken {
-    background-color: lightcoral;
-}
+@media (min-width: 992px) {
 
-.beef {
-    background-color: brown;
-    color: white;
-}
-
-.sushi {
-    background-color: moccasin;
-}
-
-@media (min-width: 1200px) {
-
-    .col-lg-1,
-    .col-lg-2,
-    .col-lg-3,
-    .col-lg-4,
-    .col-lg-5,
-    .col-lg-6,
-    .col-lg-7,
-    .col-lg-8,
-    .col-lg-9,
-    .col-lg-10,
-    .col-lg-11,
-    .col-lg-12 {
+    .col-lg-4 {
         float: left;
-        border: 1px solid green;
-    }
-
-    .col-lg-1 {
-        width: 8.33%;
-    }
-
-    .col-lg-2 {
-        width: 16.66%;
-    }
-
-    .col-lg-3 {
-        width: 25%;
+        padding: 1%;
     }
 
     .col-lg-4 {
         width: 33.33%;
     }
+}
 
-    .col-lg-5 {
-        width: 41.66%;
+@media (min-width: 768px) and (max-width: 991px) {
+
+    .col-md-6 {
+        float: left;
+        padding: 1%;
     }
 
-    .col-lg-6 {
+    .col-md-6 {
         width: 50%;
     }
 
-    .col-lg-7 {
-        width: 58.33%;
+}
+
+@media (max-width: 767px) {
+
+    .col-sm-12 {
+        float: left;
+        padding: 1%;
     }
 
-    .col-lg-8 {
-        width: 66.66%;
-    }
-
-    .col-lg-9 {
-        width: 74.99%;
-    }
-
-    .col-lg-10 {
-        width: 83.33%;
-    }
-
-    .col-lg-11 {
-        width: 91.66%;
-    }
-
-    .col-lg-12 {
+    .col-sm-12 {
         width: 100%;
     }
+
 }
